--- a/aws/PAS-AIO-Deployment.yaml
+++ b/aws/PAS-AIO-Deployment.yaml
@@ -93,7 +93,7 @@ Resources:
                   - logs:DescribeLogGroups
                   - logs:DescribeLogStreams
                   - logs:PutLogEvents
-                Resource: *
+                Resource: '*'
         - PolicyName: SSM
           PolicyDocument:
             Version: '2012-10-17'
@@ -409,7 +409,7 @@ Resources:
                   - kms:EnableKeyRotation
                   - kms:UpdateKeyDescription
                   - kms:CreateAlias
-                Resource: *
+                Resource: '*'
         - PolicyName: VaultBootstrapIAMPolicy
           PolicyDocument:
             Statement:
@@ -417,8 +417,7 @@ Resources:
                 Action:
                   - iam:DeleteRolePolicy
                   - iam:PutRolePolicy
-                Resource:
-                  - '*'
+                Resource: '*'
   InstancesSSMPolicy:
     Type: AWS::IAM::Policy
     Properties:
