--- a/aws/PAS-Component-Single-Deployment.yaml
+++ b/aws/PAS-Component-Single-Deployment.yaml
@@ -303,8 +303,8 @@ Resources:
           services:
             windows:
               AmazonSSMAgent:
-                enabled: 'true'
-                ensureRunning: 'true'
+                enabled: true
+                ensureRunning: true
                 files:
                   - >-
                     C:\Program
@@ -326,25 +326,25 @@ Resources:
                 "https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/windows_amd64/AmazonSSMAgentSetup.exe"
                 -OutFile "$env:USERPROFILE\Desktop\SSMAgent_latest.exe"
                 -UseBasicParsing
-              waitAfterCompletion: '0'
-              ignoreErrors: 'true'
+              waitAfterCompletion: 0
+              ignoreErrors: true
             3-updateLatestSSM:
               command: >
                 powershell.exe -Command Start-Process -FilePath
                 $env:USERPROFILE\Desktop\SSMAgent_latest.exe -ArgumentList "/S"
                 -Wait
-              waitAfterCompletion: '0'
-              ignoreErrors: 'true'
+              waitAfterCompletion: 0
+              ignoreErrors: true
             4-removeLatestSSM:
               command: >
                 powershell.exe -Command rm -Force
                 $env:USERPROFILE\Desktop\SSMAgent_latest.exe
-              waitAfterCompletion: '0'
-              ignoreErrors: 'true'
+              waitAfterCompletion: 0
+              ignoreErrors: true
             5-restartSSM:
               command: powershell.exe -Command "Restart-Service AmazonSSMAgent"
-              waitAfterCompletion: '60'
-              ignoreErrors: 'true'
+              waitAfterCompletion: 60
+              ignoreErrors: true
         configServices:
           commands:
             1-configuration:
@@ -358,28 +358,28 @@ Resources:
                     - DRValueEmpty
                     - !Sub '${VaultPrivateIP}'
                     - !Sub '${VaultPrivateIP},${DRPrivateIP}'
-              waitAfterCompletion: '0'
+              waitAfterCompletion: 0
             2-registration:
               command: !Sub >
                 powershell.exe -File C:\CyberArk\Deployment\CPMRegistration.ps1
                 -VaultAdminUser ${VaultAdminUser} -SSMAdminPassParameterID
                 ${StoreAdminPassword.SsmId}
-              waitAfterCompletion: '0'
+              waitAfterCompletion: 0
             3-configureCPMService:
               command: >
                 powershell.exe -File C:\CyberArk\Deployment\Set-LocalService.ps1
                 -Username "PasswordManagerUser" -Services "CyberArk Central
                 Policy Manager Scanner"
-              waitAfterCompletion: '0'
+              waitAfterCompletion: 0
             4-configureCPMService:
               command: powershell.exe -File C:\CyberArk\Deployment\Set-LocalService.ps1 -Username "PasswordManagerUser" -Services "CyberArk Password Manager"
-              waitAfterCompletion: '0'
+              waitAfterCompletion: 0
             5-CPMserviceConfig:
               command: sc config "CyberArk Password Manager" start=auto
-              waitAfterCompletion: '0'
+              waitAfterCompletion: 0
             6-CPMSserviceConfig:
               command: sc config "CyberArk Central Policy Manager Scanner" start=auto
-              waitAfterCompletion: '0'
+              waitAfterCompletion: 0
             7-ChangeHostName:
               command: !Sub >
                 powershell.exe -Command Rename-Computer -NewName
@@ -391,7 +391,7 @@ Resources:
               command: !Sub >
                 cfn-signal.exe -e %ERRORLEVEL% --stack ${AWS::StackId}
                 --resource CPMMachine --region ${AWS::Region}
-              waitAfterCompletion: '0'
+              waitAfterCompletion: 0
     Condition: CreateCPMCondition
     CreationPolicy:
       ResourceSignal:
@@ -431,8 +431,8 @@ Resources:
           services:
             windows:
               AmazonSSMAgent:
-                enabled: 'true'
-                ensureRunning: 'true'
+                enabled: true
+                ensureRunning: true
                 files:
                   - >-
                     C:\Program
@@ -454,25 +454,25 @@ Resources:
                 "https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/windows_amd64/AmazonSSMAgentSetup.exe"
                 -OutFile "$env:USERPROFILE\Desktop\SSMAgent_latest.exe"
                 -UseBasicParsing
-              waitAfterCompletion: '0'
-              ignoreErrors: 'true'
+              waitAfterCompletion: 0
+              ignoreErrors: true
             3-updateLatestSSM:
               command: >
                 powershell.exe -Command Start-Process -FilePath
                 $env:USERPROFILE\Desktop\SSMAgent_latest.exe -ArgumentList "/S"
                 -Wait
-              waitAfterCompletion: '0'
-              ignoreErrors: 'true'
+              waitAfterCompletion: 0
+              ignoreErrors: true
             4-removeLatestSSM:
               command: >
                 powershell.exe -Command rm -Force
                 $env:USERPROFILE\Desktop\SSMAgent_latest.exe
-              waitAfterCompletion: '0'
-              ignoreErrors: 'true'
+              waitAfterCompletion: 0
+              ignoreErrors: true
             5-restartSSM:
               command: powershell.exe -Command "Restart-Service AmazonSSMAgent"
-              waitAfterCompletion: '60'
-              ignoreErrors: 'true'
+              waitAfterCompletion: 60
+              ignoreErrors: true
             6-ChangeHostName:
               command: !Sub >
                 powershell.exe -Command Rename-Computer -NewName
@@ -482,7 +482,7 @@ Resources:
           commands:
             1-configurePVWAService:
               command: powershell.exe -File C:\CyberArk\Deployment\Set-LocalService.ps1 -Username "PVWAReportsUser" -Services "CyberArk Scheduled Tasks"
-              waitAfterCompletion: '0'
+              waitAfterCompletion: 0
             2-configuration:
               command: !Sub 
                 - >-
@@ -498,13 +498,13 @@ Resources:
                     - PVWAHostNameEmpty
                     - empty
                     - !Sub '${PVWAHostName}'
-              waitAfterCompletion: '0'
+              waitAfterCompletion: 0
             3-registration:
               command: !Sub >
                 powershell.exe -File C:\CyberArk\Deployment\PVWARegistration.ps1
                 -VaultAdminUser ${VaultAdminUser} -SSMAdminPassParameterID
                 ${StoreAdminPassword.SsmId}
-              waitAfterCompletion: '0'
+              waitAfterCompletion: 0
             4-startAppPool:
               command: >-
                 powershell -Command "& {&'Import-Module' WebAdministration}"; "&
@@ -512,10 +512,10 @@ Resources:
                 {&'Set-ItemProperty' -Path
                 IIS:\AppPools\PasswordVaultWebAccessPool -Name autoStart -Value
                 'true'}"
-              waitAfterCompletion: '0'
+              waitAfterCompletion: 0
             5-CSTserviceConfig:
               command: sc config "CyberArk Scheduled Tasks" start=auto
-              waitAfterCompletion: '0'
+              waitAfterCompletion: 0
             6-restart:
               command: powershell.exe -Command "Restart-Computer -Force"
               waitAfterCompletion: forever
@@ -525,7 +525,7 @@ Resources:
               command: !Sub >
                 cfn-signal.exe -e %ERRORLEVEL% --stack ${AWS::StackId}
                 --resource PVWAMachine --region ${AWS::Region}
-              waitAfterCompletion: '0'
+              waitAfterCompletion: 0
     Condition: CreatePVWACondition
     CreationPolicy:
       ResourceSignal:
@@ -565,8 +565,8 @@ Resources:
           services:
             windows:
               AmazonSSMAgent:
-                enabled: 'true'
-                ensureRunning: 'true'
+                enabled: true
+                ensureRunning: true
                 files:
                   - >-
                     C:\Program
@@ -587,25 +587,25 @@ Resources:
                 "https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/windows_amd64/AmazonSSMAgentSetup.exe"
                 -OutFile "$env:USERPROFILE\Desktop\SSMAgent_latest.exe"
                 -UseBasicParsing
-              waitAfterCompletion: '0'
-              ignoreErrors: 'true'
+              waitAfterCompletion: 0
+              ignoreErrors: true
             3-updateLatestSSM:
               command: >
                 powershell.exe -Command Start-Process -FilePath
                 $env:USERPROFILE\Desktop\SSMAgent_latest.exe -ArgumentList "/S"
                 -Wait
-              waitAfterCompletion: '0'
-              ignoreErrors: 'true'
+              waitAfterCompletion: 0
+              ignoreErrors: true
             4-removeLatestSSM:
               command: >
                 powershell.exe -Command rm -Force
                 $env:USERPROFILE\Desktop\SSMAgent_latest.exe
-              waitAfterCompletion: '0'
-              ignoreErrors: 'true'
+              waitAfterCompletion: 0
+              ignoreErrors: true
             5-restartSSM:
               command: powershell.exe -Command "Restart-Service AmazonSSMAgent"
-              waitAfterCompletion: '60'
-              ignoreErrors: 'true'
+              waitAfterCompletion: 60
+              ignoreErrors: true
         configServices:
           commands:
             1-configuration:
@@ -618,16 +618,16 @@ Resources:
                     - DRValueEmpty
                     - !Sub '${VaultPrivateIP}'
                     - !Sub '${VaultPrivateIP},${DRPrivateIP}'
-              waitAfterCompletion: '0'
+              waitAfterCompletion: 0
             2-registration:
               command: !Sub >
                 powershell.exe -File C:\CyberArk\Deployment\PSMRegistration.ps1
                 -VaultAdminUser ${VaultAdminUser} -SSMAdminPassParameterID
                 ${StoreAdminPassword.SsmId}
-              waitAfterCompletion: '0'
+              waitAfterCompletion: 0
             3-PSMserviceConfig:
               command: sc config "Cyber-Ark Privileged Session Manager" start=auto
-              waitAfterCompletion: '0'
+              waitAfterCompletion: 0
             4-ChangeHostName:
               command: !Sub >
                 powershell.exe -Command Rename-Computer -NewName ${ComponentHostName} -Force -Restart
@@ -637,7 +637,7 @@ Resources:
             0-signalCompletion:
               command: !Sub >
                 cfn-signal.exe -e %ERRORLEVEL% --stack ${AWS::StackId} --resource PSMMachine --region ${AWS::Region}
-              waitAfterCompletion: '0'
+              waitAfterCompletion: 0
     Condition: CreatePSMCondition
     CreationPolicy:
       ResourceSignal:
@@ -678,8 +678,8 @@ Resources:
           commands:
             01_download_ssmagent_update:
               command: sudo yum install -y https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/linux_amd64/amazon-ssm-agent.rpm
-              ignoreErrors: 'true'
-              waitAfterCompletion: '0'
+              ignoreErrors: true
+              waitAfterCompletion: 0
         install_cwlogs:
           files:
             /etc/awslogs/awslogs.conf:
@@ -721,12 +721,12 @@ Resources:
           commands:
             01_create_state_directory:
               command: mkdir -p /var/awslogs/state
-              waitAfterCompletion: '0'
+              waitAfterCompletion: 0
           services:
             sysvinit:
               awslogs:
-                enabled: 'true'
-                ensureRunning: 'true'
+                enabled: true
+                ensureRunning: true
                 files:
                   - /etc/awslogs/awslogs.conf
         install_psmp:
@@ -761,16 +761,16 @@ Resources:
           commands:
             1-ScriptsPermissions:
               command: sudo chmod 700 /root/CD-Image/preinstall.sh /root/CD-Image/createCredFile.sh
-              waitAfterCompletion: '0'
+              waitAfterCompletion: 0
             2-PreInstall:
               command: !Sub >
                 sudo /root/CD-Image/preinstall.sh ${ComponentHostName}
-                waitAfterCompletion: '0'
+                waitAfterCompletion: 0
             3-CreateCredFile:
               command: !Sub >
                 sudo /root/CD-Image/createCredFile.sh ${VaultAdminUser}
                 ${StoreAdminPassword.SsmId} ${AWS::Region} ${ComponentHostName}
-                waitAfterCompletion: '0'
+                waitAfterCompletion: 0
             4-PSMPdeploy:
               command: !Sub 
                 - >-
@@ -782,7 +782,7 @@ Resources:
                     - DRValueEmpty
                     - !Sub '${VaultPrivateIP}'
                     - !Sub '${VaultPrivateIP},${DRPrivateIP}'
-              waitAfterCompletion: '0'
+              waitAfterCompletion: 0
     Condition: CreatePSMPCondition
     CreationPolicy:
       ResourceSignal:
