--- a/aws/Vault-Single-Deployment.yaml
+++ b/aws/Vault-Single-Deployment.yaml
@@ -289,10 +289,47 @@ Resources:
             - configSignal
         configSSMAndHostname:
           files:
-            C:\CyberArk\Deployment\KMSPolicy.json:
+            C:\CyberArk\Deployment\VaultTagKMS.ps1:
               content:
                 Fn::Sub: |-
-                  {"Statement": [{"Action": ["kms:Encrypt", "kms:Decrypt"], "Resource": "arn:${AWS::Partition}:kms:${AWS::Region}:${AWS::AccountId}:key/KMSKEYID_PLACEHOLDER", "Effect": "Allow"}]}
+                  [CmdletBinding()]
+                  param(
+                    [Parameter(Mandatory = $true)] [string]$Role,
+                    [Parameter(Mandatory = $true)] [string]$Region
+                  )
+                  
+                  . "$PSScriptRoot\Common.ps1"
+                  $LogFile = "C:\CyberArk\Deployment\Logs\VaultInit.log"
+                  
+                  try {
+                    # Retrieve KMS Key ID
+                    WriteLog -LogFile $LogFile -LogLevel "INFO" -Log "Retrieving KMS Key ID"
+                    $DBParmLine = Get-Content -Path "C:\Program Files (x86)\PrivateArk\Server\Conf\dbparm.ini" | Where-Object { $_ -match 'CloudKeyUUID=' }
+                    $KMSKeyID = $DBParmLine.Split('=')[1]
+                    WriteLog -LogFile $LogFile -LogLevel "INFO" -Log "Retrievied KMS Key ID successfully"
+                    
+                    # Get Instance ID
+                    $InstanceId = Invoke-WebRequest http://169.254.169.254/latest/meta-data/instance-id
+                    
+                    # Load AWS powershell assemblies
+                    WriteLog -LogFile $LogFile -LogLevel "INFO" -Log "Loading AWS PowerShell assemblies"
+                    Get-AWSPowerShellVersion | Out-Null
+                    WriteLog -LogFile $LogFile -LogLevel "INFO" -Log "AWS PowerShell assemblies loaded successfully"
+                  
+                    # Tag KMS Key with Vault instance id and enable key rotation
+                    WriteLog -LogFile $LogFile -LogLevel "INFO" -Log "trying to tag KMS Key with Vault instance ID and add alias"
+                    $InstanceTag = New-Object Amazon.KeyManagementService.Model.Tag
+                    $InstanceTag.TagKey = "VaultInstance"
+                    $InstanceTag.TagValue = $InstanceId
+                    Add-KMSResourceTag -KeyId $KMSKeyID -Tag $InstanceTag -Force
+                    Update-KMSKeyDescription -KeyId $KMSKeyID -Description "CyberArk Digital Vault KMS Key for Vault Instance $InstanceId" -Force
+                    New-KMSAlias -TargetKeyId $KMSKeyID -AliasName "alias/vault/$InstanceId" -Force
+                    WriteLog -LogFile $LogFile -LogLevel "INFO" -Log "KMS Key tagged successfully"
+                    exit 0
+                  } catch {
+                    WriteLog -LogFile $LogFile -LogLevel "ERROR" -Log $_.Exception.Message
+                    exit 1
+                  }
           services:
             windows:
               AmazonSSMAgent:
@@ -322,9 +359,9 @@ Resources:
               command: !Sub >
                 powershell.exe -File C:\CyberArk\Deployment\VaultPostInstall.ps1 -SSMMasterPassParameterID ${StoreMasterPassword.SsmId} -SSMAdminPassParameterID ${StoreAdminPassword.SsmId} -IsPrimaryOrDR "Primary" -PrimaryVaultIP "1.1.1.1" -LicensePath "C:\CyberArk\Deployment\vaultLicense.xml" -RecoveryPublicKeyPath "C:\CyberArk\Deployment\recoveryPublic.key" -Region ${AWS::Region}
               waitAfterCompletion: 0
-            3-removePermissions:
+            3-changeKMSTag:
               command: !Sub >
-                powershell.exe -File C:\CyberArk\Deployment\VaultRemoveIAMPolicies.ps1 -Role ${VaultInstancesRole} -Region ${AWS::Region}
+                powershell.exe -File C:\CyberArk\Deployment\VaultTagKMS.ps1 -Role ${VaultInstancesRole} -Region ${AWS::Region}
               waitAfterCompletion: 0
             4-changeHostName:
               command: !Sub >
